- fixed problem with corrupted mbox, which contains binary data   between mails.   The bug is related to a bug/problem in QT3 with QFile::readline()   and QFile::at() which returns wrong fileposition if the file contains   binary data

BUG: 106796

svn path=/trunk/KDE/kdepim/kmailcvt/; revision=427894